# liba53

./: .gitignore  CMakeLists.txt
src/: a5.c  ifc.cpp
src/include/: a5.h
tests/: a53test.cpp
